Collect-TV-20180201/src/objects/GoogSession__c.object
<CustomObject>
    <fields>
        <fullName>Anti_CSRF_Token__c</fullName>
        <label>Anti CSRF Token</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthSubSessionToken__c</fullName>
        <label>AuthSubSessionToken</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Priority__c</fullName>
        <label>Data Priority</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GOOGLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALESFORCE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Don_t_Recreate_Deleted_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t Recreate Deleted Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter_Data__c</fullName>
        <label>Filter_Data</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Google_Custom_Fields_in_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Google Custom Fields in Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guess_Matching_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guess Matching Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_To_Matching_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Link To Matching Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size_of_Contacts__c</fullName>
        <label>Size of Contacts</label>
        <picklist>
            <picklistValues>
                <fullName>Tiny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Data__c</fullName>
        <label>State_Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transfer_Partial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer Partial</label>
        <type>Checkbox</type>
    </fields>
    <label>GoogSession</label>
    <nameField>
        <label>GoogSession Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>